# autonomous-sensor-pipeline

./: .gitignore  CMakeLists.txt  README.md
components/: logger.cpp  processor.cpp  sensor.cpp
data/: alpha_sweep_avg.csv  analysis.csv  analysis_alpha_0.1.csv  analysis_alpha_0.3.csv  analysis_alpha_0.5.csv  analysis_alpha_0.7.csv  filtered.csv  filtered_alpha_0.1.csv  filtered_alpha_0.3.csv  filtered_alpha_0.5.csv  filtered_alpha_0.7.csv  output.csv  raw.csv  truth.csv
include/: config.h  data.h  logger.h  pipeline_manager.h  processor.h  sensor.h
include/common/: data.h  queue.h
include/components/: filtered_logger.h  processor.h  raw_logger.h  sensor.h  truth_logger.h
include/config/: config.h
include/pipeline/: pipeline_manager.h
lib/: logger.cpp  sensor.cpp
pipeline/: pipeline_manager.cpp
scripts/: analyze.py  plot.py  plot_alpha_sweep.py  plot_alpha_sweep_avg.py  run_alpha_sweep.py  run_alpha_sweep_avg.py
src/: main.cpp
src/components/: filtered_logger.cpp  processor.cpp  raw_logger.cpp  sensor.cpp  truth_logger.cpp
src/config/: config.cpp
src/pipeline/: pipeline_manager.cpp
